Address Locale constructor deprecations